--- a/productos/templates/index.html
+++ b/productos/templates/index.html
@@ -1,4 +1,6 @@
 {% if productos %}
+
+
 	<table>
 		{% for producto in productos %}
 		<tr>
@@ -8,7 +10,7 @@
 		</tr>
 		<tr>
 			<td>
-				<img src="{{ producto.imagen}} " alt="Smiley face" height="42" width="42">
+				<img src="{{ producto.imagen.url }}" height="220"></a>
 			</td>
 		</tr>
 		<tr>
@@ -17,7 +19,7 @@
 			</td>
 		</tr><tr>
 			<td>
-				<p>${{ producto.p_neto }}</p>
+				<p>${{ producto.p_venta }}</p>
 			</td>
 		</tr>
 		<tr></tr>
