Enlace a detalles producto funcionando.

--- a/productos/templates/index.html
+++ b/productos/templates/index.html
@@ -5,7 +5,7 @@
 		{% for producto in productos %}
 		<tr>
 			<td>
-			<a href="">{{ producto.nombre }}</a>
+			<a href="{% url 'productos:detalle' producto.id %}">{{ producto.nombre }}</a>
 			</td>
 		</tr>
 		<tr>
