agregada galeria de fotos con detalle y tags

--- a/productos/templates/detalle.html
+++ b/productos/templates/detalle.html
@@ -1,4 +1,4 @@
 <h1>{{ producto.nombre }}</h1>
-<ul>
-test
-</ul>
+<img src="{{ producto.imagen.url }}" height="880"></a>
+<p>{{ producto.descripcion }}</p>
+<p>${{ producto.p_venta }}</p>
