sitio con bootstrap

--- a/galeria/templates/galeria.html
+++ b/galeria/templates/galeria.html
@@ -1,18 +1,26 @@
-{% if imagenes %}
+{% extends "base.html" %}
+{% load static %}
+   {% block title %}GyP | Productos{% endblock %}
+
+{% block body %}
+
+	{% if imagenes %}
 
 
-	<table>
-		{% for imagen in imagenes %}
-		<tr>
-			<td>
-				<a href="{% url 'galeria:imagen' imagen.id %}">
-					<img src="{{ imagen.imagen.url }}" height="220"></a>
-			</td>
-		</tr>
+		<table>
+			{% for imagen in imagenes %}
+			<tr>
+				<td>
+					<a href="{% url 'galeria:imagen' imagen.id %}">
+						<img src="{{ imagen.imagen.url }}" height="220"></a>
+				</td>
+			</tr>
 
-		<tr></tr>
-		{% endfor %}
-	</table>
-{% else %}
-    <p>No hay imagenes.</p>
-{% endif %}
+			<tr></tr>
+			{% endfor %}
+		</table>
+	{% else %}
+	    <p>No hay imagenes.</p>
+	{% endif %}
+
+{% endblock %}
