--- a/productos/templates/detalle.html
+++ b/productos/templates/detalle.html
@@ -1,4 +1,12 @@
+{% extends "base.html" %}
+{% load static %}
+   {% block title %}GyP | Productos{% endblock %}
+
+{% block body %}
+
 <h1>{{ producto.nombre }}</h1>
 <img src="{{ producto.imagen.url }}" height="880"></a>
 <p>{{ producto.descripcion }}</p>
 <p>${{ producto.p_venta }}</p>
+
+{% endblock %}
