--- a/galeria/templates/imagen.html
+++ b/galeria/templates/imagen.html
@@ -1,3 +1,11 @@
+{% extends "base.html" %}
+{% load static %}
+   {% block title %}GyP | Productos{% endblock %}
+
+{% block body %}
+
 <h1>{{ imagen.nombre }}</h1>
 <img src="{{ imagen.imagen.url }}" height="880"></a>
 <p>{{ imagen.descripcion }}</p>
+
+{% endblock %}
