--- a/productos/templates/detalle.html
+++ b/productos/templates/detalle.html
@@ -3,10 +3,11 @@
    {% block title %}GyP | Productos{% endblock %}
 
 {% block body %}
-
-<h1>{{ producto.nombre }}</h1>
-<img src="{{ producto.imagen.url }}" height="880"></a>
-<p>{{ producto.descripcion }}</p>
-<p>${{ producto.p_venta }}</p>
+<div class='container'>
+	<h1>{{ producto.nombre }}</h1>
+	<img class='img-responsive' src="{{ producto.imagen.url }}" height="880"></a>
+	<p>{{ producto.descripcion }}</p>
+	<p>${{ producto.p_venta }}</p>
+</div>
 
 {% endblock %}
