--- a/productos/templates/productos.html
+++ b/productos/templates/productos.html
@@ -5,21 +5,23 @@
 {% block body %}
 
 	{% if productos %}
-
+	<div class='container'>
+		<div class='row'>
 
 			{% for producto in productos %}
-			<div class='container'>
-				<a href="{% url 'productos:detalle' producto.id %}">{{ producto.nombre }}</a>
+			<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a  href="{% url 'productos:detalle' producto.id %}">
+                    <img class="img-responsive" src="{{ producto.imagen.url }}"  alt="">
+                </a>
+                <p>{{ producto.descripcion }}</p>
+				<p>${{ producto.p_venta }}</p>
+            </div>
 
-					<a href="{% url 'productos:detalle' producto.id %}">
-						<img class='img-responsive' src="{{ producto.imagen.url }}" height="220"></a>
-
-					<p>{{ producto.descripcion }}</p>
-
-					<p>${{ producto.p_venta }}</p>
-
-			</div>
+			
+		
 			{% endfor %}
+			</div>
+		</div>
 	{% else %}
 	    <p>No hay productos para mostrar.</p>
 	{% endif %}
