agregado link pdf, falla el sistema de carpetas para encontrar la ubicacion de las imagenes.

--- a/productos/templates/productos.html
+++ b/productos/templates/productos.html
@@ -15,6 +15,7 @@
                 </a>
                 <p>{{ producto.descripcion }}</p>
 				<p>${{ producto.p_venta }}</p>
+				<a href="pdf/{{ producto.id }}">pdf</a>
             </div>
 
 			
